[package]
name = "ggez-goodies"
description = "Various small useful add-ons for the ggez game framework"
version = "0.5.0-rc.1"
repository = "https://github.com/ggez/ggez-goodies"
documentation = "https://docs.rs/ggez-goodies"
authors = ["Simon Heath <icefoxen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"


[dependencies]
# until a new version is released the devel branch of ggez is needed, see https://github.com/ggez/ggez/issues/843
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
nalgebra-glm = "0.3.0"
rand = "0.4"

[dev-dependencies]
ezing = "0.2.0"
